# mamba4rec

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/mamba4rec/: __init__.py  dataset.py  s3_tools.py  s3_train.py  s3_validate.py  train.py  validate.py
tests/: __init__.py  test_ml_1m.py  test_train_ml_1m.py
